[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name="Junsu Park", email="junsu489@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"

[project.dependencies]
numpy = "^1.24.2"
pylint = "^2.17.4"

[tool.pylint.main]
load-plugins = ["pylint.extensions.docparams"]
