[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name="Junsu Park", email="junsu489@gmail.com" }
]
readme = "README.md"
requires-python = "3.10.1"

[project.dependencies]
python = "^3.10.1"
numpy = "^1.26.4"

[tool.pylint.main]
load-plugins = ["pylint.extensions.docparams"]
