[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "volatility_arbitrage"
version = "0.1.0"
authors = [
    { name="Junsu Park", email="junsu489@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["volatility_arbitrage"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pylint.main]
load-plugins = ["pylint.extensions.docparams"]
